0.8.1 (2011-08-17)
==================

- Harmonized index name / discriminator in catalog setup with content schema
  and queries used in later examples.  Thanks to Douglas Cerna.

- Fixed semantics of 'applyEq' for the Keyword index. The 'applyEq' (and
  'applyNotEq') methods now expect scalar values for the query. 'applyAny',
  'applyAll' and their respective negations should be used to query multiple
  values.

- Fixed bug in query parser where names inside of 'any' or 'all' calls were
  not being parsed properly.

- When using CQEs, names may now be embedded inside of a list or tuple,
  allowing expressions like this: "tags in any([tag1, tag2])" where tag1 and
  tag2 are names that will be resolved at query run time.

0.8.0 (2011-03-20)
==================

- Deprecated ``.search``-based querying of catalog in favor of newer
  query language(s) via ``.query``.  See docs for more info.

- Added a ``.docids()`` method to ``CatalogIndex``.

- Deprecated ``repoze.catalog.index.path2.CatalogPathIndex2``.

0.7.3 (2010-08-26)
==================

Features
--------

- Refuse to pickle instances of ``zodb.broken.Broken`` which are
  returned as the result of an index attempting to call a callable
  discriminator function.  This prevents edge cases where instances
  with out-of-sync code could too easily write Broken objects to the
  database, leaving them around for the next hapless unpickler to
  find.  This is particularly a problem because many of our
  discriminators are *functions*; the Broken machinery attempts to
  recover the state of a broken object when it is unpickled, but it
  cannot recover the state of an attempted function call.

0.7.2 (2010-06-17)
==================

Bug Fixes
---------

- Fix a bug which allowed the document map to map more than one docid
  onto the same address, which put the reverse and forward document
  map bookeeping out of sync with each other.

Packaging
---------

- Move benchmark directory into root of distribution instead of