@@ -7,3 +7,4 @@ cover-package=repoze.catalog
 
 [aliases]
 dev = develop easy_install repoze.catalog[testing]
+docs = develop easy_install repoze.catalog[docs]
